# ecommerce-faker-data-generator

./: LICENSE  README.md  database.ini  pyproject.toml  run_data_generation.sh
src/: create_object_order.py  create_objects.py  create_tables.py  drop_table.py  load_config.py
